# polybot-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml
src/: config.rs  events.rs  executor.rs  lib.rs  logging.rs  main.rs
src/api/: gamma.rs
src/feeds/: binance.rs  mod.rs  polymarket.rs  user_ws.rs
src/state/: book.rs  market.rs  mod.rs  orders.rs  position.rs
src/strategy/: actions.rs  btc_guard.rs  flow.rs  mod.rs  pricing.rs  sizing.rs  variance.rs
